# MyAgentPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h
core/: argv.cpp  argv.h  synckeeper.cpp  synckeeper.h  ws.cpp
include/: assert_nonfatal.h
jsoncpp-1.8.4/include/json/: config.h
jsoncpp-1.8.4/src/: CMakeLists.txt
jsoncpp-1.8.4/src/test_lib_json/: libjsoncpp.so.1.8.4
uWS/: HttpParser.h  HttpRouter.h  LoopData.h
